Created footer in HTML + CSS
div + ID "footer" in HTML. Styled in CSS to align under bottom left of app

--- a/styles.css
+++ b/styles.css
@@ -180,3 +180,10 @@ li {
 #description {
   font-style: italic;
 }
+
+#footer {
+  display: inline;
+  position: relative;
+  left: 5px;
+  bottom: -30px;
+}
