--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ body {
 
 .top {
   height: 10px;
+  position: relative;
+  top: -25px;
 }
 
 .mainDisplay .raining {
@@ -109,34 +111,51 @@ p.card-title {
   padding-left: 15px;
   text-align: center;
   font-weight: 800;
-  font-size: 52px;
-  bottom: 5px;
+  font-size: 34px;
+  bottom: -10px;
   left: -10px;
   position: relative;
+  padding-bottom: 10px;
+  color: #616060;
 }
-.searchBar {
+#searchBar {
   margin: 0 auto;
-  float: none;
   margin-bottom: 10px;
   padding-left: 90px;
+  left: 90px;
   position: relative;
   bottom: 350px;
-  display: inline-block;
+  display: inline;
 }
 
-.searchButton {
+#searchButton {
+  margin: 0 auto;
   border-radius: 4px;
   border: 2px rgb(153, 153, 153);
   color: grey;
+  display: inline-block;
+  left: -40px;
+  position: relative;
 }
 #current-location-button {
   border-radius: 4px;
   border: 2px rgb(153, 153, 153);
   color: grey;
   margin: 0 auto;
-  display: block;
+  display: inline-block;
   position: relative;
-  left: 5px;
+  left: -115px;
+}
+
+#mainDisplayIcon {
+  top: 10px;
+  width: 40%;
+  height: 40%;
+}
+
+.textConditions .li {
+  position: relative;
+  bottom: -30px;
 }
 
 ul {
@@ -156,11 +175,11 @@ li {
 }
 
 .small {
-  font-size: 15px;
+  font-size: 12px;
   display: inline;
   position: relative;
-  left: 225px;
-  bottom: 160px;
+  left: 30px;
+  bottom: 40px;
   font-weight: 800;
 }
 
@@ -173,4 +192,9 @@ li {
   position: relative;
   left: 5px;
   bottom: -30px;
+}
+
+#textConditions {
+  position: relative;
+  bottom: 20px;
 }
